# api-agent

./: CLAUDE.md  Dockerfile  README.md  pyproject.toml
api_agent/agent/: graphql_agent.py  rest_agent.py
api_agent/graphql/: client.py
api_agent/recipe/: common.py
api_agent/rest/: client.py  schema_loader.py
api_agent/utils/: http_errors.py
tests/: test_graphql_client.py  test_http_errors.py  test_middleware.py  test_poll_tool.py  test_rest_client.py  test_rest_schema.py
